# MPPI

./: .gitignore  CITATION.cff  CMakeLists.txt  CMakePresets.json  LICENSE  Notes.md  README.md
benchmarks/: CMakeLists.txt  bandwidth_benchmark.cpp  bandwidth_benchmark_control.cpp  bandwidth_benchmark_custom.cpp  bandwidth_benchmark_stl.cpp  latency_benchmark.cpp  latency_benchmark_control.cpp  latency_benchmark_custom.cpp  latency_benchmark_custom_dynamic.cpp  latency_benchmark_stl.cpp
cmake/: mppiConfig.cmake
cmake/toolchains/: clang-p2996-libcxx.cmake
gpu_kernels/: CMakeLists.txt  kernel.cpp  kernel.hpp  utility_functions.cpp  utility_functions.hpp
include/: amodes.hpp  communicator.hpp  custom_concepts.hpp  datapattern.hpp  datatype.hpp  hint.hpp  mppi.hpp  parameter_pack_helpers.hpp  reflection_helpers.hpp  tag.hpp
mppi/: communicator.hpp  custom_concepts.hpp  datapattern.hpp  datatype.hpp  mppi.hpp  parameter_pack_helpers.hpp  pattern.hpp  reflection_helpers.hpp  source_destination.hpp  stringliteral.hpp  tag.hpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  amodes_failing_tests.cpp  amodes_tests.cpp  datapattern_tests.cpp  pattern_tests.cpp  pattern_tests_gpu.cpp  reflection_tests.cpp  send_tests.hpp  send_tests_gpu.hpp  test.hpp  test_main.cpp  test_main_gpu.cpp
